--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -210,7 +210,7 @@
     <string name="unhide">Tonen</string>
     <string name="hide_folder">Map verbergen</string>
     <string name="unhide_folder">Map tonen</string>
-    <string name="temporarily_show_hidden">Verborgen items tonen</string>
+    <string name="temporarily_show_hidden">Verborgen items tijdelijk tonen</string>
     <string name="stop_showing_hidden">Verborgen items niet tonen</string>
     <string name="maximum_share_reached">Kan niet zoveel items tegelijk delen</string>
     <string name="empty_and_disable_recycle_bin">Prullenbak leegmaken en uitschakelen</string>
