update the Edit intent, allow forcing an app chooser

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Yaddaş doludur xətası</string>
     <string name="an_error_occurred">Xəta baş verdi: %s</string>
     <string name="open_with">Bununla aç</string>
+    <string name="edit_with">Edit with</string>
     <string name="no_app_found">Etibarlı tətbiq tapılmadı</string>
     <string name="set_as">Təyin et</string>
     <string name="value_copied_to_clipboard">Miqdar panelə kopyalandı</string>
