--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Fehler: Zu wenig Speicher</string>
     <string name="an_error_occurred">Es ist ein Fehler aufgetreten: %s</string>
     <string name="open_with">Öffnen mit</string>
+    <string name="edit_with">Bearbeiten mit</string>
     <string name="no_app_found">Keine passende App gefunden</string>
     <string name="set_as">Festlegen als</string>
     <string name="value_copied_to_clipboard">Wert in Zwischenablage kopiert</string>
