--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Σφάλμα Έλλειψη μνήμης</string>
     <string name="an_error_occurred">Παρουσιάστηκε σφάλμα: %s</string>
     <string name="open_with">Άνοιγμα με</string>
+    <string name="edit_with">Επεξεργασία με</string>
     <string name="no_app_found">Δεν βρέθηκε έγκυρη εφαρμογή</string>
     <string name="set_as">Ορισμός ως</string>
     <string name="value_copied_to_clipboard">Η τιμή αντιγράφηκε στο πρόχειρο</string>
