--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Error: sin memoria</string>
     <string name="an_error_occurred">Ocurrió un error: %s</string>
     <string name="open_with">Abrir con</string>
+    <string name="edit_with">Editar con</string>
     <string name="no_app_found">No se encontró una aplicación válida</string>
     <string name="set_as">Establecer como</string>
     <string name="value_copied_to_clipboard">Valor copiado al portapapeles</string>
