--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Liian vähän muistia</string>
     <string name="an_error_occurred">Tapahtui virhe: %s</string>
     <string name="open_with">Avaa sovelluksessa</string>
+    <string name="edit_with">Muokkaa sovelluksella</string>
     <string name="no_app_found">Sovelluksia ei löydetty</string>
     <string name="set_as">Aseta</string>
     <string name="value_copied_to_clipboard">Kopioitu leikepöydälle</string>
