--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Greška, nema slobodnog prostora</string>
     <string name="an_error_occurred">Dogodila se greška: %s</string>
     <string name="open_with">Otvori s</string>
+    <string name="edit_with">Uredi pomoću</string>
     <string name="no_app_found">Nema odgovarajuće aplikacije</string>
     <string name="set_as">Postavi kao</string>
     <string name="value_copied_to_clipboard">Vrijednost spremljena u međuspremnik</string>
