--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Out of memory hiba</string>
     <string name="an_error_occurred">Hiba történt: %s</string>
     <string name="open_with">Megnyitás ezzel</string>
+    <string name="edit_with">Szerkesztés ezzel</string>
     <string name="no_app_found">Nem található érvényes alkalmazás</string>
     <string name="set_as">Beállítás ennek</string>
     <string name="value_copied_to_clipboard">Érték másolva a vágólapra</string>
