--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">メモリー不足エラー</string>
     <string name="an_error_occurred">エラーが発生しました: %s</string>
     <string name="open_with">別のアプリで開く</string>
+    <string name="edit_with">他のアプリで編集</string>
     <string name="no_app_found">有効なアプリが見つかりません</string>
     <string name="set_as">他で使う</string>
     <string name="value_copied_to_clipboard">値をクリップボードにコピーしました</string>
