--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">메모리 부족 오류</string>
     <string name="an_error_occurred">에러발생: %s</string>
     <string name="open_with">연결 애플리케이션</string>
+    <string name="edit_with">이미지편집 프로그램 연결</string>
     <string name="no_app_found">연결 가능한 애플리케이션 없음</string>
     <string name="set_as">애플리케이션에 설정</string>
     <string name="value_copied_to_clipboard">클립보드에 복사됨</string>
