--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Klaida: trūksta atminties</string>
     <string name="an_error_occurred">Klaida: %s</string>
     <string name="open_with">Atidaryti su</string>
+    <string name="edit_with">Redaguoti su</string>
     <string name="no_app_found">Nerasta tinkamos programėlės</string>
     <string name="set_as">Nustatyti kaip</string>
     <string name="value_copied_to_clipboard">Reikšmė nukopijuota į iškarpinė</string>
