--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Onvoldoende geheugen</string>
     <string name="an_error_occurred">Fout opgetreden: %s</string>
     <string name="open_with">Openen met</string>
+    <string name="edit_with">Bewerken met</string>
     <string name="no_app_found">Geen app gevonden om dit bestand mee te openen</string>
     <string name="set_as">Instellen als</string>
     <string name="value_copied_to_clipboard">Gekopieerd naar klembord</string>
