--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -6,9 +6,10 @@
     <string name="invalid_file_format">Недопустимый формат файла</string>
     <string name="out_of_memory_error">Память переполнена</string>
     <string name="an_error_occurred">Произошла ошибка: %s</string>
-    <string name="open_with">Открыть в…</string>
+    <string name="open_with">Открыть в</string>
+    <string name="edit_with">Редактировать в</string>
     <string name="no_app_found">Приложение не найдено</string>
-    <string name="set_as">Установить как…</string>
+    <string name="set_as">Установить как</string>
     <string name="value_copied_to_clipboard">Значение скопировано в буфер обмена</string>
     <string name="unknown">Неизвестно</string>
     <string name="always">Всегда</string>
