--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Premalo pomnilnika!</string>
     <string name="an_error_occurred">Prišlo je do napake: %s</string>
     <string name="open_with">Odpri z</string>
+    <string name="edit_with">Uredi z</string>
     <string name="no_app_found">Ni veljavne aplikacije</string>
     <string name="set_as">Nastavi kot</string>
     <string name="value_copied_to_clipboard">Vrednost kopirana v odložišče</string>
