--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Yetersiz hafıza hatası</string>
     <string name="an_error_occurred">Bir hata oluştu: %s</string>
     <string name="open_with">Birlikte aç</string>
+    <string name="edit_with">Şununla düzenle</string>
     <string name="no_app_found">Geçerli bir uygulama bulunamadı</string>
     <string name="set_as">Ayarla</string>
     <string name="value_copied_to_clipboard">Değer panoya kopyalandı</string>
