--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Недостатньо пам\'яті</string>
     <string name="an_error_occurred">Сталася помилка: %s</string>
     <string name="open_with">Відкрити за допомогою</string>
+    <string name="edit_with">Редагувати за допомогою</string>
     <string name="no_app_found">Не знайдено допустимих додатків</string>
     <string name="set_as">Встановити як</string>
     <string name="value_copied_to_clipboard">Значення скопійовано у буфер обміну</string>
