--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Error: sense memòria</string>
     <string name="an_error_occurred">Ha ocorregut un error: %s</string>
     <string name="open_with">Obrir amb</string>
+    <string name="edit_with">Editar amb</string>
     <string name="no_app_found">No s\'ha trobat una aplicació vàlida</string>
     <string name="set_as">Establir com</string>
     <string name="value_copied_to_clipboard">Valor copiat al portaretalls</string>
