--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Fejl, ikke mere plads</string>
     <string name="an_error_occurred">Der opstod en fejl: %s</string>
     <string name="open_with">Åbn med</string>
+    <string name="edit_with">Rediger med</string>
     <string name="no_app_found">Der blev ikke fundet en gyldig app</string>
     <string name="set_as">Anvend som</string>
     <string name="value_copied_to_clipboard">Værdi kopieret til udklipsholder</string>
