--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Erreur : mémoire insuffisante</string>
     <string name="an_error_occurred">Une erreur est survenue : %s</string>
     <string name="open_with">Ouvrir avec</string>
+    <string name="edit_with">Modifier avec</string>
     <string name="no_app_found">Aucune application disponible</string>
     <string name="set_as">Définir en tant que</string>
     <string name="value_copied_to_clipboard">Valeur copiée dans le presse-papier</string>
