--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Error kehabisan memori</string>
     <string name="an_error_occurred">Kesalahan: %s</string>
     <string name="open_with">Buka dengan</string>
+    <string name="edit_with">Edit dengan</string>
     <string name="no_app_found">Tidak ada aplikasi yang sesuai</string>
     <string name="set_as">Setel sebagai</string>
     <string name="value_copied_to_clipboard">Nilai disalin ke papan klip</string>
