--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Out of memory error</string>
     <string name="an_error_occurred">An error occurred: %s</string>
     <string name="open_with">Open with</string>
+    <string name="edit_with">Edit with</string>
     <string name="no_app_found">No valid app found</string>
     <string name="set_as">Set as</string>
     <string name="value_copied_to_clipboard">Value copied to clipboard</string>
