--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -7,6 +7,7 @@
     <string name="out_of_memory_error">Feil: Tomt for minne</string>
     <string name="an_error_occurred">En feil oppstod: %s</string>
     <string name="open_with">Åpne med</string>
+    <string name="edit_with">Rediger med</string>
     <string name="no_app_found">Ingen gyldig app funnet</string>
     <string name="set_as">Sett som</string>
     <string name="value_copied_to_clipboard">Verdi kopiert til utklippstavle</string>
